@@ -232,7 +232,7 @@ config_param config_params[] = {
     {
     "v4l2_palette",
     "# v4l2_palette allows to choose preferable palette to be use by motion\n"
-    "# to capture from those supported by your videodevice. (default: 16)\n"
+    "# to capture from those supported by your videodevice. (default: 17)\n"
     "# E.g. if your videodevice supports both V4L2_PIX_FMT_SBGGR8 and\n"
     "# V4L2_PIX_FMT_MJPEG then motion will by default use V4L2_PIX_FMT_MJPEG.\n"
     "# Setting v4l2_palette to 2 forces motion to use V4L2_PIX_FMT_SBGGR8\n"
@@ -244,18 +244,19 @@ config_param config_params[] = {
     "# V4L2_PIX_FMT_SBGGR8  : 2  'BA81'\n"
     "# V4L2_PIX_FMT_SPCA561 : 3  'S561'\n"
     "# V4L2_PIX_FMT_SGBRG8  : 4  'GBRG'\n"
-    "# V4L2_PIX_FMT_PAC207  : 5  'P207'\n"
-    "# V4L2_PIX_FMT_PJPG    : 6  'PJPG'\n"
-    "# V4L2_PIX_FMT_MJPEG   : 7  'MJPEG'\n" 
-    "# V4L2_PIX_FMT_JPEG    : 8  'JPEG'\n"
-    "# V4L2_PIX_FMT_RGB24   : 9  'RGB3'\n"
-    "# V4L2_PIX_FMT_SPCA501 : 10 'S501'\n"
-    "# V4L2_PIX_FMT_SPCA505 : 11 'S505'\n"
-    "# V4L2_PIX_FMT_SPCA508 : 12 'S508'\n"
-    "# V4L2_PIX_FMT_UYVY    : 13 'UYVY'\n"
-    "# V4L2_PIX_FMT_YUYV    : 14 'YUYV'\n"
-    "# V4L2_PIX_FMT_YUV422P : 15 '422P'\n"
-    "# V4L2_PIX_FMT_YUV420  : 16 'YU12'\n"
+    "# V4L2_PIX_FMT_SGRBG8  : 5  'GRBG'\n" 
+    "# V4L2_PIX_FMT_PAC207  : 6  'P207'\n"
+    "# V4L2_PIX_FMT_PJPG    : 7  'PJPG'\n"
+    "# V4L2_PIX_FMT_MJPEG   : 8  'MJPEG'\n" 
+    "# V4L2_PIX_FMT_JPEG    : 9  'JPEG'\n"
+    "# V4L2_PIX_FMT_RGB24   : 10 'RGB3'\n"
+    "# V4L2_PIX_FMT_SPCA501 : 11 'S501'\n"
+    "# V4L2_PIX_FMT_SPCA505 : 12 'S505'\n"
+    "# V4L2_PIX_FMT_SPCA508 : 13 'S508'\n"
+    "# V4L2_PIX_FMT_UYVY    : 14 'UYVY'\n"
+    "# V4L2_PIX_FMT_YUYV    : 15 'YUYV'\n"
+    "# V4L2_PIX_FMT_YUV422P : 16 '422P'\n"
+    "# V4L2_PIX_FMT_YUV420  : 17 'YU12'\n"
     "#",
     0,
     CONF_OFFSET(v4l2_palette),
